education section: added most recent button to, aligning list items, fixed content layout

--- a/SDFPP/stylesheet.css
+++ b/SDFPP/stylesheet.css
@@ -11,6 +11,10 @@ h2{
     display: flex;
     flex-direction: row;
 }
+.stack{
+    display: flex;
+    flex-direction: row;
+}
 
 /*card or box css*/
 .card{
@@ -136,14 +140,13 @@ header{
 /*education css*/
 .education .incard{
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    font-size: 8px;
    padding: .5em;
    margin-bottom: 1em;
 }
 .education .school{
     background-color: #4A8B70;
-    
     color:#E7F0EC;
 }
 
@@ -197,7 +200,7 @@ header{
 /*experience css*/
 .experience .incard{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     font-size: 8px;
     margin-bottom: 1em;
     padding: 1em;
@@ -206,17 +209,37 @@ header{
     background-color: #4A8B70;
     color:#E7F0EC;
 }
-.right{
-    display: inline;
+
+.main{
+    line-height: 2em;
+}
+.heading .headingleft{
+    flex-grow: 2;
+}
+.heading .buttonright{
+    background-color: #D76239;
+    border-radius: 59px;
+    padding: .2em 1em;
 }
 .left h3{
     font-size: 10px;
-
 }
 .left sub{
     font-size: 8px;
     display: flex;
     flex-direction: row;
+}
+sub hr{
+    width: 20px;
+    height: 1px;
+    background-color: #E7F0EC;
+    transform: rotate(90deg);
+    border:0;
+    align-self: center;
+}
+.generalworker hr, .hospitality hr{
+    background-color: #020202;
+    width:50px;
 }
 
 /*footer css*/
